# Fantareal-TTS-Studio

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  fantareal-extension.json  pyproject.toml
.github/workflows/: ci.yml
docs/: model-pack-activation-phase11.md  model-pack-contract.md  offline-runtime-bundle.md  real-runtime-phase13.md  runtime-readiness-phase12.md
src/fantareal_tts_studio/: __init__.py  model_pack.py  runtime_installer.py  service.py
tests/: test_model_pack.py  test_runtime_installer.py  test_service.py
web/: app.js  index.html  styles.css
