[project]
name = "fantareal-tts-studio"
version = "0.2.1"
description = "GPT-SoVITS TTS Provider extension for Fantareal"
readme = "README.md"
license = "MIT"
authors = [{ name = "cOkieeman" }]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/cOkieeman/Fantareal-TTS-Studio"
Repository = "https://github.com/cOkieeman/Fantareal-TTS-Studio"
Issues = "https://github.com/cOkieeman/Fantareal-TTS-Studio/issues"

[project.scripts]
fantareal-tts-studio-service = "fantareal_tts_studio.service:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001"]
